2021-08-31 Jan Kotanski <jan.kotanski@desy.de>
	* move the general tools into ScrolArea
	* tagged as 2.65.0

2021-08-06 Jan Kotanski <jan.kotanski@desy.de>
	* fix for fetching metadata in partial image source
	* tagged as 2.64.2

2021-08-06 Jan Kotanski <jan.kotanski@desy.de>
	* add mutex for PyTine.get command in imageSources
	* use TIFLoader when fabio does not work
	* tagged as 2.64.1

2021-07-30 Jan Kotanski <jan.kotanski@desy.de>
	* add the --no-space-instance command line parameter
	* improve implementation of the currenttime() methods with tzlocal import
	* tagged as 2.64.0

2021-06-11 Jan Kotanski <jan.kotanski@desy.de>
	* fix for py2 H5CppVirtualFieldLayout call
	* tagged as 2.63.3

2021-05-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for cbf reading
	* tagged as 2.63.2

2021-05-25 Jan Kotanski <jan.kotanski@desy.de>
	* fix for loading cbf metadata in py3
	* tagged as 2.63.1

2021-05-25 Jan Kotanski <jan.kotanski@desy.de>
	* load cbf memory data with fabio 0.11.0 if available
	* tagged as 2.63.0

2021-05-19 Jan Kotanski <jan.kotanski@desy.de>
	* fix for sourcepath for asapo image source
	* tagged as 2.62.1

2021-05-07 Jan Kotanski <jan.kotanski@desy.de>
	* add sourcepath for asapo image source
	* tagged as 2.62.0

2021-04-30 Jan Kotanski <jan.kotanski@desy.de>
	* remove bytearray flag
	* tagged as 2.61.1

2021-04-09 Jan Kotanski <jan.kotanski@desy.de>
	* maximal type value added to a negative mask value
	* update h5 wrappers
	* tagged as 2.61.0

2021-04-07 Jan Kotanski <jan.kotanski@desy.de>
	* add support for nexus files in  Hidra image source
	* add milliseconds to http image source
	* provides to BytesIO only bytes arrays
	* tagged as 2.60.0

2021-03-22 Jan Kotanski <jan.kotanski@desy.de>
	* add support for h5file:/ scheme in Tango File image source
	* add support for asapo 2020.12.0
	* tagged as 2.59.0

2021-03-05 Jan Kotanski <jan.kotanski@desy.de>
	* fix typo in LiveViewer.__backgroundscale
	* tagged as 2.58.1
