@@ -1,5 +1,6 @@
 2021-08-31 Jan Kotanski <jan.kotanski@desy.de>
 	* move the general tools into ScrolArea
+	* fix for storing autofactor
 	* tagged as 2.65.0
 
 2021-08-06 Jan Kotanski <jan.kotanski@desy.de>
